# CheckoutX

./: .dockerignore  .gitignore  SECURITY_ANALYSIS_AUTH_GATEWAY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/gateway-bff/: Dockerfile  jest.config.js  next.config.ts  package.json  tsconfig.json
apps/gateway-bff/src/: middleware.ts
checkout-ui/: package-lock.json  package.json  tailwind.config.ts
checkout-ui/app/: globals.css  layout.tsx  page.tsx
checkout-ui/app/(admin)/: layout.tsx
checkout-ui/app/(auth)/: layout.tsx
checkout-ui/app/(shop)/: layout.tsx
checkout-ui/components/cart/: add-to-cart-button.tsx
checkout-ui/components/layout/: header.tsx
checkout-ui/hooks/: useAuth.tsx  useCart.tsx
checkout-ui/lib/: api.ts  auth.ts
docs/: SECURITY_ANALYSIS.md  ai_agent_design.md
infra/docker/: docker-compose.dev.yml
scripts/: schema.sql
services/ai/agent-service/: README.md  agent_pb2.py  agent_pb2_grpc.py  pyproject.toml
services/ai/agent-service/agent_service/: cart_pb2.py  cart_pb2_grpc.py  checkout_pb2.py  checkout_pb2_grpc.py  main.py  product_lookup_pb2.py  product_lookup_pb2_grpc.py  product_pb2.py  product_pb2_grpc.py  product_read_service_pb2.py  product_read_service_pb2_grpc.py
services/ai/agent-service/agent_service/clients/: cart_crud_client.py  checkout_client.py  product_lookup_client.py  product_read_client.py
shared/proto/: agent.proto  auth_service.proto  cart.proto  cart_snapshot_service.proto  checkout.proto  inventory.proto  product.proto  product_read_service.proto
(+204 files in other folders)
